# FFTWpp

./: .gitignore  CMakeLists.txt  FFTWpp.h  README.md
FFTWpp/: All  Concepts  Core  Flags  Memory  Plan  Ranges
FFTWpp/src/: Concepts.h  Core.h  Data.h  Eigen.h  Flags.h  MainPage.h  Memory.h  Options.h  Plan.h  Transform.h  Utility.h  Views.h  Wisdom.h
cmake/: Doxygen.cmake
examples/: CMakeLists.txt  Example.cpp  Example1.cpp  Example2.cpp  Example3.cpp  Example4.cpp  FFTWConceptsTest.cpp  FlagExample.cpp  fftw.cpp
html/: md_README.html  pages.html
html/search/: all_0.js
include/: CMakeLists.txt  FFTW.h  FFTWAllocator.h  FFTWCleanUp.h  FFTWConcepts.h  FFTWFlags.h  FFTWMemory.h  FFTWPlan.h  FFTWPlan1D.h  FFTWSimple.h  FFTWallocator.h
include/src/: Concepts.h
latex/: md_README.tex  refman.tex
src/: CMakeLists.txt  Concepts.h  FFTW.h  FFTWConcepts.h  FFTWFlags.h  FFTWMemory.h  FFTWPlan.h  FFTWPlan1D.h  Flags.h  Memory.h  Plan.h
test/: CMakeLists.txt  FFTW1DRealTest.h  FFTW1DTest.h  FFTWTests.cpp  MakeComplexData.h  MakeRealData.h  Test1DC2C.h  Test1DR2C.h  Test1DR2R.h  TestC2C.h  Tests.cpp
tests/: CMakeLists.txt  MakeData.h  Test1D.h  Test1DC2C.h  Test1DR2C.h  Test1DR2R.h  Tests.cpp  fft1d_test.cpp  vector_test.cpp
